--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-moderador/formulario-nuevo-moderador.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-moderador/formulario-nuevo-moderador.component.html
@@ -2,7 +2,7 @@
   <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
+  <app-info-bar class="col"></app-info-bar>
 </div>
 
 <!--Formulario-->
