--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-post/formulario-nuevo-post.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-post/formulario-nuevo-post.component.html
@@ -1,8 +1,8 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="row">
+  <app-navbar class="col p-0" style="max-height: 4rem; margin-bottom: 1em;"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
+  <app-info-bar class="col p-0"></app-info-bar>
 </div>
 <!--Formulario-->
 <div class="row mh-50 h-50 d-flex justify-content-center align-center">
