--- a/src/app/GrupoPanelUsuario/Info/post-selected/post-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/post-selected/post-selected.component.html
@@ -1,5 +1,5 @@
 <div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em"></app-navbar>
+  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em"></app-navbar>
 </div>
 <div class="row">
   <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
