--- a/src/app/GrupoPanelUsuario/action-buttons-adm/action-buttons-adm.component.html
+++ b/src/app/GrupoPanelUsuario/action-buttons-adm/action-buttons-adm.component.html
@@ -1,11 +1,16 @@
-<div class="min-vw-100 d-flex justify-content-around mt-3">
-  <a routerLink="./adminMod" class="col-m-6 modAdmAction">
+<div class="row mt-3 d-flex justify-content-around">
+  <a routerLink="./adminMod" class="col-sm-4 modAdmAction">
     <h2>Administrar moderadores</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminModUser.png">
   </a>
 
-  <a routerLink="./adminAsoc" class="col-m-6 modAdmAction">
+  <a routerLink="./adminAsoc" class="col-sm-4 modAdmAction">
     <h2>Administrar asociaciones</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminAsoc.png">
+  </a>
+
+  <a routerLink="./adminPost" class="col-sm-4 modAdmAction">
+    <h2>Administrar publicaciones</h2>
+    <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminPost.png">
   </a>
 </div>
