--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -2,7 +2,7 @@
   <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
+  <app-info-bar-user class="col"></app-info-bar-user>
 </div>
 
 <div class="row">
