--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -1,49 +1,61 @@
-<nav class="navbar navbar-expand-lg navbar-light darkblue-bg-snowmasher">
+<nav class="navbar navbar-expand-lg navbar-light darkblue-bg-snowmasher" style="z-index: 10; max-width: 100vw;">
   <div class="container-fluid d-flex align-center">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <a class="navbar-brand text-white userNavLink d-sm-none" href="/panel">
+      <span>
+        <a class="text-white mr-2" style="font-size: 11px;" routerLink="/loggedout" (click)="logout()">Cerrar
+          sesión</a>
+        {{ user.name }}
+        <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem;"
+          src="../../assets/img/icons/UsersAvatar/user.png" alt="Imagen del usuario">
+        <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem;"
+          src="../../assets/img/icons/UsersAvatar/mod.png" alt="Imagen del usuario">
+        <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem;"
+          src="../../assets/img/icons/UsersAvatar/admin.png" alt="Imagen del usuario">
+      </span>
+    </a>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active text-white" aria-current="page" href="/principal">Principal</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="user.rol !== 'A'" class="nav-item">
           <a class="nav-link text-white" href="/canarios">Mis Canarios</a>
         </li>
       </ul>
-      <!--
-      <form class="d-flex m">
-        <input class="form-control me-2 mt-1 ml-5" type="search" placeholder="Buscar usuario" aria-label="Search">
-        <input class="btn btn-outline-light ml-2" type="button" value="Buscar">
-      </form>
-      -->
 
-      <form class="ml-4" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <input id="userByName" type="text" placeholder="Usuario" [formControl]="myControl" [matAutocomplete]="auto">
+      <form class="ml-4 d-flex" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <input class="form-control mt-1 me-2" id="userByName" type="text" placeholder="Usuario" [formControl]="myControl" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let u of filteredOptions | async" [value]="u.split('#')[0]">
-            <a style="display: block; height: 100%; width: 100%;" routerLink="/principal/user/{{ u.split('#')[1] }}">{{ u.split('#')[0] }}</a>
+            <a style="display: block; height: 100%; width: 100%;" routerLink="/principal/user/{{ u.split('#')[1] }}">{{
+              u.split('#')[0] }}</a>
           </mat-option>
         </mat-autocomplete>
         <button type="submit" class="btn blue-bg-snowmasher text-white ml-2">Buscar</button>
       </form>
 
-
-      <a class="nav-link text-white userNavLink" href="/panel">
-        <span>
-          <a class="text-white mr-5" style="font-size: smaller;" routerLink="/loggedout" (click)="logout()">Cerrar
-            sesión</a>
-          {{ user.name }}
-          <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/user.png"
-            alt="Imagen del usuario">
-          <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/mod.png"
-            alt="Imagen del usuario">
-          <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem;" src="../../assets/img/icons/UsersAvatar/admin.png"
-            alt="Imagen del usuario">
-        </span>
-      </a>
     </div>
   </div>
+
+  <a class="text-white userNavLink d-none d-sm-block" href="/panel">
+    <span class="row mr-1">
+      <a class="col text-white mr-2" style="font-size: smaller; align-self: center;" routerLink="/loggedout" (click)="logout()">Cerrar
+        sesión</a>
+      <p class="col" style="align-self: center;">{{ user.name }}</p>
+      <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem; align-self: center;"
+        src="../../assets/img/icons/UsersAvatar/user.png" alt="Imagen del usuario">
+      <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem; align-self: center;"
+        src="../../assets/img/icons/UsersAvatar/mod.png" alt="Imagen del usuario">
+      <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem; align-self: center;"
+        src="../../assets/img/icons/UsersAvatar/admin.png" alt="Imagen del usuario">
+    </span>
+  </a>
 </nav>
+
+
