--- a/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
@@ -1,8 +1,8 @@
 <div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
+  <app-info-bar-user class="col p-0"></app-info-bar-user>
 </div>
 
 <div class="row">
