--- a/src/app/GrupoPanelUsuario/action-buttons-mod/action-buttons-mod.component.html
+++ b/src/app/GrupoPanelUsuario/action-buttons-mod/action-buttons-mod.component.html
@@ -1,10 +1,10 @@
-<div class="min-vw-100 d-flex justify-content-around mt-3">
-  <a routerLink="./adminUser" class="col-m-6 modAdmAction">
+<div class="row mt-3 d-flex justify-content-around">
+  <a routerLink="./adminUser" class="col-sm-6 modAdmAction">
     <h2>Administrar usuarios</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminModUser.png">
   </a>
 
-  <a routerLink="./adminPost" class="col-m-6 modAdmAction">
+  <a routerLink="./adminPost" class="col-sm-6 modAdmAction">
     <h2>Administrar publicaciones</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminPost.png">
   </a>
