--- a/src/app/GrupoPanelUsuario/user-panel/user-panel.component.html
+++ b/src/app/GrupoPanelUsuario/user-panel/user-panel.component.html
@@ -1,8 +1,8 @@
 <div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
+  <app-info-bar-user class="col"></app-info-bar-user>
 </div>
 
 <div class="row" *ngIf="user.rol=='U'; else noUser">
@@ -11,18 +11,18 @@
 
 <ng-template #noUser>
   <div class="row" *ngIf="user.rol=='M'; else Admin">
-    <app-action-buttons-mod></app-action-buttons-mod>
+    <app-action-buttons-mod  class="col"></app-action-buttons-mod>
   </div>
 </ng-template>
 
 <ng-template #Admin>
   <div class="row">
-  <app-action-buttons-adm></app-action-buttons-adm>
+  <app-action-buttons-adm class="col"></app-action-buttons-adm>
   </div>
 </ng-template>
 
 <div class="row">
-  <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
+  <app-footer class="col p-0"></app-footer>
 </div>
 
 
