--- a/src/app/GrupoPrincipal/principal/principal.component.html
+++ b/src/app/GrupoPrincipal/principal/principal.component.html
@@ -1,12 +1,12 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="row">
+  <app-navbar class="col" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
 </div>
 <div class="row">
-  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
+  <app-info-bar class="col p-0"></app-info-bar>
 </div>
 
-<div class="row d-flex justify-content-center">
-  <div class="col-10" style="width: 85%; max-width: 85vw; align-self: center;" *ngFor="let post_actual of posts">
+<div class="row d-flex justify-content-center" style="max-width: 100vw;">
+  <div class="col-11" style="width: 85%; max-width: 85vw; align-self: center;" *ngFor="let post_actual of posts">
     <div class="col-12 container mt-4 border darkblue-border-snowmasher" style="min-height: 20em; width: 100%;">
       <div class="row darkblue-bg-snowmasher text-light p-2 d-flex flex-column" style="min-height: 5em;">
         <h4>{{ post_actual.titulo }}</h4>
