--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid min-vw-100 h-100 d-flex justify-content-center" style="margin:auto">
+<div style="margin:auto">
   <router-outlet></router-outlet>
 </div>
