Principales componentes responsive

--- a/src/app/GrupoGeneral/footer/footer.component.html
+++ b/src/app/GrupoGeneral/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="darkblue-bg-snowmasher d-flex justify-content-center text-center mt-4" style="width: 100%; height: 2.5em;">
-  <p class="text-light" style="margin: auto;">NestBook 2021 - Álvaro Robles Ortega</p>
+<div class="darkblue-bg-snowmasher text-center ml-0 mr-0 mt-4" style="height: 2.5em;">
+  <p class="text-light pt-2" style="text-align: center;">NestBook 2021 - Álvaro Robles Ortega</p>
 </div>
