--- a/src/app/GrupoPanelUsuario/action-buttons-mod/action-buttons-mod.component.html
+++ b/src/app/GrupoPanelUsuario/action-buttons-mod/action-buttons-mod.component.html
@@ -1,11 +1,13 @@
-<div class="row mt-3 d-flex justify-content-around">
-  <a routerLink="./adminUser" class="col-sm-6 modAdmAction">
+<div class="container-fluid mt-3 d-sm-flex">
+  <!-- Boton Administrar usuarios -->
+  <a routerLink="./adminUser" class="col col-sm-6 modAdmAction">
     <h2>Administrar usuarios</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminModUser.png">
   </a>
-
-  <a routerLink="./adminPost" class="col-sm-6 modAdmAction">
+  <!-- Boton administrar publicaciones -->
+  <a routerLink="./adminPost" class="col col-sm-6 modAdmAction">
     <h2>Administrar publicaciones</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminPost.png">
   </a>
+
 </div>
