--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -1,23 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-light darkblue-bg-snowmasher" style="z-index: 10; max-width: 100vw;">
+<nav class="navbar navbar-expand-lg navbar-light darkblue-bg-snowmasher" style="z-index: 10;">
   <div class="container-fluid d-flex align-center">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand text-white userNavLink d-sm-none" href="/panel">
-      <span>
-        <a class="text-white mr-2" style="font-size: 11px;" routerLink="/loggedout" (click)="logout()">Cerrar
-          sesión</a>
-        {{ user.name }}
-        <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem;"
+    <div class="navbar-brand text-white userNavLink d-flex d-lg-none justify-content-between">
+
+      <a class="col-6 text-white mr-2 d-inline-block" style="font-size: smaller; align-self: center;"
+        routerLink="/loggedout" (click)="logout()">Cerrar
+        sesión</a>
+
+      <a class="col-6 pr-0 d-inline-flex text-white flex-row justify-content-around" style="align-items: center;"
+        href="/panel">{{ user.name }}
+        <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem; align-self: center;"
           src="../../assets/img/icons/UsersAvatar/user.png" alt="Imagen del usuario">
-        <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem;"
+        <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem; align-self: center;"
           src="../../assets/img/icons/UsersAvatar/mod.png" alt="Imagen del usuario">
-        <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem;"
+        <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem; align-self: center;"
           src="../../assets/img/icons/UsersAvatar/admin.png" alt="Imagen del usuario">
-      </span>
-    </a>
+      </a>
+    </div>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -30,7 +33,8 @@
       </ul>
 
       <form class="ml-4 d-flex" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <input class="form-control mt-1 me-2" id="userByName" type="text" placeholder="Usuario" [formControl]="myControl" [matAutocomplete]="auto">
+        <input class="form-control mt-1 me-2" id="userByName" type="text" placeholder="Usuario"
+          [formControl]="myControl" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let u of filteredOptions | async" [value]="u.split('#')[0]">
             <a style="display: block; height: 100%; width: 100%;" routerLink="/principal/user/{{ u.split('#')[1] }}">{{
@@ -43,19 +47,26 @@
     </div>
   </div>
 
-  <a class="text-white userNavLink d-none d-sm-block" href="/panel">
-    <span class="row mr-1">
-      <a class="col text-white mr-2" style="font-size: smaller; align-self: center;" routerLink="/loggedout" (click)="logout()">Cerrar
-        sesión</a>
-      <p class="col" style="align-self: center;">{{ user.name }}</p>
+  <div class="text-white container-fluid userNavLink d-none d-lg-flex justify-content-end" style="max-width: 23%;">
+
+    <div class="col-2">
+
+    </div>
+
+    <a class="col-3 text-white mr-2 d-inline-block" style="font-size: smaller; align-self: center;"
+      routerLink="/loggedout" (click)="logout()">Cerrar
+      sesión</a>
+
+    <a class="col-6 pr-0 d-inline-flex text-white flex-row justify-content-around" style="align-items: center;"
+      href="/panel">{{ user.name }}
       <img *ngIf="user.rol === 'U'" class="img rounded-2" style="height: 3rem; align-self: center;"
         src="../../assets/img/icons/UsersAvatar/user.png" alt="Imagen del usuario">
       <img *ngIf="user.rol === 'M'" class="img rounded-2" style="height: 3rem; align-self: center;"
         src="../../assets/img/icons/UsersAvatar/mod.png" alt="Imagen del usuario">
       <img *ngIf="user.rol === 'A'" class="img rounded-2" style="height: 3rem; align-self: center;"
         src="../../assets/img/icons/UsersAvatar/admin.png" alt="Imagen del usuario">
-    </span>
-  </a>
+    </a>
+
+  </div>
+
 </nav>
-
-
