--- a/src/app/GrupoPrincipal/principal/principal.component.html
+++ b/src/app/GrupoPrincipal/principal/principal.component.html
@@ -1,18 +1,18 @@
-<div class="row">
-  <app-navbar class="col" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
+<div class="container-fluid p-0">
   <app-info-bar class="col p-0"></app-info-bar>
 </div>
 
-<div class="row d-flex justify-content-center" style="max-width: 100vw;">
-  <div class="col-11" style="width: 85%; max-width: 85vw; align-self: center;" *ngFor="let post_actual of posts">
-    <div class="col-12 container mt-4 border darkblue-border-snowmasher" style="min-height: 20em; width: 100%;">
+<div class="container-fluid p-0 d-flex justify-content-center flex-wrap">
+  <div class="col-12 col-sm-10" style="width: 90%; align-self: center;" *ngFor="let post_actual of posts">
+    <div class="container-fluid mt-4 border darkblue-border-snowmasher" style="min-height: 20em; width: 100%;">
       <div class="row darkblue-bg-snowmasher text-light p-2 d-flex flex-column" style="min-height: 5em;">
         <h4>{{ post_actual.titulo }}</h4>
         <h6>{{ post_actual.created_at | date: 'yyyy-MM-dd  HH:mm' }}</h6>
       </div>
-      <div class="row">
+      <div class="container-fluid p-0 d-flex flex-column flex-sm-row">
         <div class="col col-sm-6 p-4">
           <p style="word-wrap: break-word;">{{ post_actual.contenido }}</p>
         </div>
@@ -29,6 +29,6 @@
   </div>
 </div>
 
-<div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
